# vscode-insiders-checker-archlinux

./: Cargo.toml
src/: main.rs
