[package]
name = "vscode-insiders-checker-archlinux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ntfy = { version = "0.3.3", features = ["blocking"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
